重构六门语言 ph11 为四层交付物——ph01~ph11 全库闭环
按 tenetlang-notes skill 场景 B 将 ph11 升级为四层完整交付物，
三轮审计教训全部落地（sol 头数字/覆盖率/错误码实测、产物纪律、依赖诚实）：

- c/ph11-sanitizer-testing：6 示例 + 5 题 + buffer 库；sanitizer 报告实测，
  macOS LSan 局限如实标注，覆盖率 72.73%→100%
- cpp/ph11-portability：5 组 + 5 题 + 跨平台文件工具库；双 clang 实测，
  修正旧文档 5 处平台断言（__unix__/__GNUC__/默认标准/__cpp_lib_*）
- go/ph11-microservice-rpc：6 module + 4 题 + 设备采集微服务；
  net/rpc 标准库主线，gRPC 实际生成跑通（protoc 29.3），覆盖率实测
- java/ph11-build-tooling：javac/jar/jlink/Maven/shade + 4 题 + 多模块模板；
  Maven 离线实测，Gradle 未装如实标注
- py/ph11-database：6 示例 + 4 题 + 设备管理后端；SQLAlchemy/真实 redis 实测，
  alembic 未装如实标注
- rs/ph11-error-handling：5 示例 + 5 题 + 可靠 CLI；4 类 ? 错误实测均 E0277，
  纯 std 零依赖

六门 ph11「下一阶段」均写为末阶段终点声明（ph12+ 目录待建，无死链）；
场景 D 验收：四层完整、导航链全通、格式复查全过、产物干净；
记录落盘 .workbuddy/memory/2026-08-31.md